testsuite/poke.pkl/trim-diag-2.pk
/* { dg-do compile } */

var a = [1,2][10.."foo"]; /* { dg-error "" } */
